src/styles/global.scss
body {
  font-family:  Roboto,Droid Sans,Helvetica Neue,Arial,Helvetica,sans-serif;
  letter-spacing: 0.02rem;
}
main {
  align-content: center;
  box-sizing: border-box;
  display: grid;
  hyphens: auto;
  line-height: 1.65;
  margin: 0 auto;
  min-height: 100vh;
  padding: 72px 0;
  text-align: center;
  max-width: 1200px !important;
}
h1 {
  font-size: 45px;
  text-align: center;
}
h2 {
  margin-top: 1.5em;
}
p {
  font-size: 16px;
}
a {
  color: #0076ff;
  cursor: pointer;
  text-decoration: none;
  transition: all 0.2s ease;
}


img {
  max-width: 100%;
}

ul {
  list-style: initial !important;
}
ul,ol {
  padding: revert !important;
}

.toc > ul {
  // todo: make this configurable - primary color
  border-left: 4px solid #44337a;
}

